test/fixtures/public/fail/semantic/repetitiveVars.jmm
/*  REASON:
    Cannot add arrays
*/

class RepetitiveVars {
    int b;
    bool b;

    public static void main(String[] a) {
        int[] i;
        bool i;
        int a;
    }
}
